codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__existing_untrusted_task.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: terminal.backend()
---

  Folder access
  /workspace/project                                                

  This existing task may retain settings and history, including
  project configuration or hooks loaded while it was trusted. To use
  restricted settings, start a new task. The folder's trust setting
  will not change.

› 1. Open existing task                                               
  2. Back to Agent Command Center

  enter continue · esc back
